Personal Portfolio Webpage

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
     <footer>
         <p>
-        &copy; Created by <br> &emsp;Gandharv Kulkarni
+        &copy; Created by &emsp;Gandharv Kulkarni
         </p>
     </footer>
 
