--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         >
             <img
             class="project-image"
-            src="https://raw.githubusercontent.com/gandharvk422/Portfolio/main/screenshot.png"
+            src="https://github.com/gandharvk422/gandharvk422.github.io/raw/main/screenshot.png"
             alt="project"
             />
             <p class="project-title">
