--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         >
             <img
             class="project-image"
-            src="portfolio-web.png"
+            src="https://github.com/gandharvk422/Portfolio/blob/gh-pages/portfolio-web.png"
             alt="project"
             />
             <p class="project-title">
