--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
     />
     <title>Gandharv's Design Portfolio</title>
   </head>
-<body>
+  <body>
     <!-- START NAV -->
 
     <nav id="navbar" class="nav">
-        <ul class="nav-list">
+      <ul class="nav-list">
         <li>
-            <a href="#welcome-section">About</a>
+          <a href="#welcome-section">About</a>
         </li>
         <li>
-            <a href="#projects">Work</a>
+          <a href="#projects">Work</a>
         </li>
         <li>
-            <a href="#contact">Contact</a>
+          <a href="#contact">Contact</a>
         </li>
-        </ul>
+      </ul>
     </nav>
 
     <!-- END NAV -->
@@ -40,8 +40,8 @@
     <!-- START WELCOME SECTION -->
 
     <section id="welcome-section" class="welcome-section">
-        <h1>Hey I am Gandharv</h1>
-        <p>a web developer, machine learning developer & a python developer</p>
+      <h1>Hey I am Gandharv</h1>
+      <p>a web developer, machine learning developer & a python developer</p>
     </section>
 
     <!-- END WELCOME SECTION -->
@@ -49,113 +49,113 @@
     <!-- START PROJECTS SECTION -->
 
     <section id="projects" class="projects-section">
-        <h2 class="projects-section-header">These are some of my projects</h2>
+      <h2 class="projects-section-header">These are some of my projects</h2>
 
-        <div class="projects-grid">
+      <div class="projects-grid">
         <a
-            href="https://github.com/gandharvk422/fcc-web-design-projects/tree/main/Tribute%20Page"
-            target="_blank"
-            class="project project-tile"
+          href="https://github.com/gandharvk422/fcc-web-design-projects/tree/main/Tribute%20Page"
+          target="_blank"
+          class="project project-tile"
         >
-            <img
+          <img
             class="project-image"
             src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg"
             alt="project"
-            />
-            <p class="project-title">
+          />
+          <p class="project-title">
             <span class="code">&lt;</span>
             Tribute Page
             <span class="code">&#47;&gt;</span>
-            </p>
+          </p>
         </a>
         <a
-            href="https://codepen.io/freeCodeCamp/full/qRZeGZ"
-            target="_blank"
-            class="project project-tile"
+          href="https://codepen.io/freeCodeCamp/full/qRZeGZ"
+          target="_blank"
+          class="project project-tile"
         >
-            <img
+          <img
             class="project-image"
-            src="https://raw.githubusercontent.com/gandharvk422/Portfolio/main/screenshot.png"
+            src="https://github.com/gandharvk422/gandharvk422.github.io/blob/main/screenshot.png?raw=true"
             alt="project"
-            />
-            <p class="project-title">
+          />
+          <p class="project-title">
             <span class="code">&lt;</span>
             My Portfolio
             <span class="code">&#47;&gt;</span>
-            </p>
+          </p>
         </a>
         <a
-            href="https://github.com/gandharvk422/Blindness_Detection"
-            target="_blank"
-            class="project project-tile"
+          href="https://github.com/gandharvk422/Blindness_Detection"
+          target="_blank"
+          class="project project-tile"
         >
-            <img
+          <img
             class="project-image"
             src="https://miro.medium.com/v2/resize:fit:786/format:webp/1*AzCf55_nrj0DeEWsw9NITg.jpeg"
             alt="project"
-            />
-            <p class="project-title">
+          />
+          <p class="project-title">
             <span class="code">&lt;</span>
             Blindness Detection
             <span class="code">&#47;&gt;</span>
-            </p>
+          </p>
         </a>
         <a
-            href="https://github.com/gandharvk422/Facial_Emotions_Detection"
-            target="_blank"
-            class="project project-tile"
+          href="https://github.com/gandharvk422/Facial_Emotions_Detection"
+          target="_blank"
+          class="project project-tile"
         >
-            <img
+          <img
             class="project-image"
             src="https://raw.githubusercontent.com/gandharvk422/Facial_Emotions_Detection/main/Angry.png"
             alt="project"
-            />
-            <p class="project-title">
+          />
+          <p class="project-title">
             <span class="code">&lt;</span>
             Facial Emotions Detection
             <span class="code">&#47;&gt;</span>
-            </p>
+          </p>
         </a>
         <a
-            href="https://github.com/gandharvk422/Face-Detection"
-            target="_blank"
-            class="project project-tile"
+          href="https://github.com/gandharvk422/Face-Detection"
+          target="_blank"
+          class="project project-tile"
         >
-            <img
+          <img
             class="project-image"
             src="https://miro.medium.com/v2/resize:fit:828/format:webp/1*3KtJwQpHudUAwDvrPg8n-g.jpeg"
             alt="project"
-            />
-            <p class="project-title">
+          />
+          <p class="project-title">
             <span class="code">&lt;</span>
             Face Detection
             <span class="code">&#47;&gt;</span>
-            </p>
+          </p>
         </a>
         <a
-            href="https://github.com/gandharvk422/ShapeAI_Python_Machine_Learning"
-            target="_blank"
-            class="project project-tile"
+          href="https://github.com/gandharvk422/ShapeAI_Python_Machine_Learning"
+          target="_blank"
+          class="project project-tile"
         >
-            <img
+          <img
             class="project-image"
             src="https://miro.medium.com/v2/resize:fit:786/format:webp/1*l6015d76-1OYXP6NqG2t8Q.png"
             alt="project"
-            />
-            <p class="project-title">
+          />
+          <p class="project-title">
             <span class="code">&lt;</span>
             Boston Housing Prediction
             <span class="code">&#47;&gt;</span>
-            </p>
+          </p>
         </a>
-        </div>
+      </div>
 
-        <a
+      <a
         href="https://github.com/gandharvk422"
         class="btn btn-show-all"
         target="_blank"
         >Show all<i class="fas fa-chevron-right"></i
-        ></a>
+      ></a>
     </section>
 
     <!-- END PROJECTS SECTION -->
@@ -163,36 +163,36 @@
     <!-- START CONTACT SECTION -->
 
     <section id="contact" class="contact-section">
-        <div class="contact-section-header">
+      <div class="contact-section-header">
         <h2>Let's have a cup of coffee...</h2>
         <p>How do you take your coffee?</p>
-        </div>
-        <div class="contact-links">
+      </div>
+      <div class="contact-links">
         <a
-            href="https://facebook.com/gandharvk422"
-            target="_blank"
-            class="btn contact-details"
-            ><i class="fab fa-facebook-square"></i> Facebook</a
+          href="https://facebook.com/gandharvk422"
+          target="_blank"
+          class="btn contact-details"
+          ><i class="fab fa-facebook-square"></i> Facebook</a
         >
         <a
-            id="profile-link"
-            href="https://github.com/gandharvk422"
-            target="_blank"
-            class="btn contact-details"
-            ><i class="fab fa-github"></i> GitHub</a
+          id="profile-link"
+          href="https://github.com/gandharvk422"
+          target="_blank"
+          class="btn contact-details"
+          ><i class="fab fa-github"></i> GitHub</a
         >
         <a
-            href="https://twitter.com/gandharvk422"
-            target="_blank"
-            class="btn contact-details"
-            ><i class="fab fa-twitter"></i> Twitter</a
+          href="https://twitter.com/gandharvk422"
+          target="_blank"
+          class="btn contact-details"
+          ><i class="fab fa-twitter"></i> Twitter</a
         >
         <a href="mailto:gandharvkulkarni422@gmail.com" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a
         >
         <a href="tel:844-683-3682" class="btn contact-details"
-            ><i class="fas fa-mobile-alt"></i> Call me</a
+          ><i class="fas fa-mobile-alt"></i> Call me</a
         >
-        </div>
+      </div>
     </section>
 
     <!-- END CONTACT SECTION -->
@@ -200,12 +200,11 @@
     <!-- START FOOTER SECTION -->
 
     <footer>
-        <p>
-        &copy; Created by <i>Gandharv Kulkarni</i>
-        </p>
+      <p>
+        &copy; Created by <br> &emsp;Gandharv Kulkarni
+      </p>
     </footer>
 
     <!-- END FOOTER SECTION -->
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-</body>
+  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script></body>
 </html>
